test/libyul/yulSyntaxTests/linkersymbol_ewasm.yul
{
    linkersymbol("contract/library.sol:L")
}
// ====
// dialect: ewasm
// ----
// DeclarationError: (6-18): Function not found.
